# VideoSEO

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  README.md  main.py  pyproject.toml
.trunk/: trunk.yaml
.trunk/configs/: .bandit  .codespellrc  .shellcheckrc  ruff.toml
infrastructure/: __init__.py  materialized_view_refresh_scheduler.py  scheduler.py
scripts/: dbcan_analysis_and_tuning.ipynb  process_full_history.py
src/: __init__.py  main.py
src/adapters/: __init__.py  health_service_adapter.py  openai_adapter.py  postgres_database_adapter.py  s3_storage_adapter.py  trending_search_adapter.py  video_seo_query_pipeline_adapter.py
src/adapters/graphql_adapters/: query.py
src/application/: __init__.py
src/application/prompts/: __init__.py  sanitized_query_prompt.py
src/application/services/: __init__.py  audio_transcribe_embed_service.py  postgres_database_service.py  save_to_parquet.py  trending_search_service.py
src/core/: __init__.py  logging_config.py  otel_config.py
src/domain/models/: __init__.py  health_response_model.py  otel_models.py  search_popular_videos_model.py  trending_search_models.py  video_database_model.py  video_seo_query_response_model.py  video_seo_request_schema_model.py
src/ports/input/: __init__.py  health_service_port.py  trending_search_port.py  video_seo_query_port.py
src/ports/output/: __init__.py  openai_api_port.py  postgres_database_port.py  (+1 more)
src/tests/: test_async_postgres_adapter.py  test_video_seo_query_response.py
src/utils/: __init__.py  helpers.py  singleton_metaclass.py
